# hakyll-shortcut-links

./: .travis.yml  CHANGELOG.md  README.md  hakyll-shortcut-links.cabal
.github/workflows/: ci.yml
src/: HakyllShortcutLinks.hs
src/Hakyll/: Links.hs  ShortcutLinks.hs
src/Hakyll/Links/: Parser.hs
src/Hakyll/Shortcut/: Links.hs
src/Hakyll/Shortcut/Links/: Parser.hs
src/Hakyll/ShortcutLinks/: Parser.hs
test/: Spec.hs
test/Test/: Links.hs  Parser.hs
