cabal-version:       2.4
name:                hakyll-shortcut-links
version:             0.0.0.0
synopsis:            Use shortcut-links in markdown file for Hakyll
description:         Use shortcut-links in markdown file for Hakyll. See README for more details.
homepage:            https://github.com/kowainik/hakyll-shortcut-links
bug-reports:         https://github.com/kowainik/hakyll-shortcut-links/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2019 Kowainik
category:            Web, Hakyll, Markdown
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5
                   , GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/kowainik/hakyll-shortcut-links.git

common common-options
  build-depends:       base ^>= 4.12.0.0
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8.1)
    ghc-options:       -Wmissing-deriving-strategies

  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       KindSignatures
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

  default-language:    Haskell2010


library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Hakyll.ShortcutLinks
                          Hakyll.ShortcutLinks.Parser

  build-depends:       hakyll ^>= 4.12.5
                     , megaparsec ^>= 7.0.4
                     , mtl ^>= 2.2.2
                     , pandoc-types ^>= 1.17
                     , shortcut-links ^>= 0.4.2.1
                     , text ^>= 1.2

test-suite hakyll-shortcut-links-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Links
                       Test.Parser

  build-depends:       hakyll-shortcut-links
                     , hspec ^>= 2.7.1
                     , mtl
                     , pandoc >= 2.6
                     , text

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
